tests for all server versions (flask, transmute, swagger)
